--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ img/predictions.png filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.npy filter=lfs diff=lfs merge=lfs -text
+report.pdf filter=lfs diff=lfs merge=lfs -text
